# lakeview-manager

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: create_dashboard_example.py  export_dashboard.py  list_dashboards.py
examples/sample_dashboard_json/: sample_dashboard.json
lakeview_dashboard/: dashboard.py  models.py  utils.py
lakeview_dashboard/all_models/: __init__.py  dashboard.py  datasets.py  layout.py  pages.py  specs.py  utils.py  widgets.py
tests/: conftest.py  sample_dashboard.json  test_create_dashboard.py  test_dashboard.py  test_dashboard_basics.py  test_update_dash_modify_schema.py  test_update_dashboard.py
